crates/iroha_ffi_derive/tests/ui_fail/fieldless_enum_with_explicit_discriminant.stderr
error: Fieldless enums with explicit discriminants are prohibited
 --> tests/ui_fail/fieldless_enum_with_explicit_discriminant.rs:6:5
  |
6 |     A = 1,
  |     ^
